syntax = "proto3"; //Specify proto3 version.

package usersPackage;

service UsersService {
  rpc loginUser(UserLogin) returns (User){}
  rpc getRole(UserID) returns (UserRole){}
  rpc createUser(ManageUser) returns (result){}
  rpc updateUser(ManageUser) returns (result){}
  rpc deleteUser(DeleteUser) returns (result){}
  rpc getUser(ManageUser) returns (User){}
  rpc getUsers(UserID) returns (Users){}

}


message UserLogin {
  string name = 1;
  string password = 2;
}
message ManageUser{
  string admin_id = 1;
  User managedUser = 2;
  string type =3;
}

message DeleteUser{
  string admin_id = 1;
  string userID = 2;
}
message UserID {
  string userID = 1;
}
message UserRole {
  string role = 1;
}
message Users{
  repeated User users = 1;
}
message User {
  string userID = 1;
  string name = 2;
  string password = 3;
  string address = 4;
  string role = 5;
}

message result {
  string status = 1;
}
message Empty {}
